<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search_config"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="phatnvm.nytimessearch.Activity.SearchConfig">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_date"
        android:textSize="@dimen/normal_text" />

    <DatePicker
        android:id="@+id/dpDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sort"
        android:textSize="@dimen/normal_text" />

    <Spinner
        android:id="@+id/spnOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/order" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_desk_value"
        android:textSize="15sp" />

    <CheckBox
        android:id="@+id/cbArts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arts" />

    <CheckBox
        android:id="@+id/cbFashionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fashion_style" />

    <CheckBox
        android:id="@+id/cbSports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sports" />


    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />


</LinearLayout>
